tests/fixtures/invalid/pow_str_bool_list.py
# Cannot call pow() with Str, Bool, List[int]
x = pow("hello", True, [1, 2, 3])
